Edit backend endpoints and add service to send emails

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ DB_USER=root
 DB_PASSWORD=
 DB_NAME=hardman_db 
 DB_PORT=3306
+
+EMAIL_USER=hardman.hardware.store@gmail.com
+EMAIL_PASS=PasswordTestingHardman2025
