delete chore .vs

--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,10 @@
 DB_HOST=127.0.0.1
-DB_USER=hardman
-DB_PASSWORD=hardman
+DB_USER=admin
+DB_PASSWORD=Michael11
 DB_NAME=db_hardman
 DB_PORT=3306
 
 EMAIL_USER=hardman.hardware.store@gmail.com
 EMAIL_PASS=zfwz dgsl rknt kfjo
-ADMIN_EMAIL=hardman.hardware.store@gmail.com
+ADMIN_EMAIL=hardman.hardware.store@gmail.com 
 
